--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -62,6 +62,15 @@ p {
   font-size: 1rem;
 }
 
+iframe {
+  width:100%;
+  height:100vh;
+  overflow:hidden;
+  margin:0px;
+  padding:0px;
+  border:none;
+}
+
 .textUpper {
   text-transform: uppercase;
 }
